@@ -1,5 +1,6 @@
 Release 0.3-3 (//):
   * Fix warning precedence for small port values.
+  * Fix client timer printing.
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
